fixed align and padding for div

--- a/src/sass/input-wrapper/form.scss
+++ b/src/sass/input-wrapper/form.scss
@@ -2,6 +2,8 @@
   padding: 5px 0 0px 0;
   &-wrapper {
     position: relative;
+    align-items: center;
+    display: flex;
 
     &__text {
       font-size: 18px;
@@ -9,7 +11,7 @@
       font-weight: 400;
       letter-spacing: 0.9px;
       line-height: 1.35;
-      margin: 27px 40px 55px 0;
+      margin: 27px 40px 35px 0;
       max-width: 395px;
     }
     &__picture {
@@ -26,8 +28,8 @@
     background-color: #ffffff;
     box-sizing: border-box;
     right: 0;
-    top: 100px;
-    padding: 50px 50px 0 30px;
+
+    padding: 50px 50px 20px 30px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
